<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Ouvidoria Adm</string>
    <string name="sync">Sincronizar</string>
    <string name="search">Pesquisar</string>
    <string name="search_hint">Termo chave</string>
    <string name="wait" tools:ignore="TypographyEllipsis">Aguarde...</string>
    <string name="sendData">Envio de dados para a web</string>
    <string name="getData">Obtendo dados da web</string>
    
    <string name="form_name">Incidente</string>  
    <string name="id">Número</string>   
    <string name="user">Usuário</string>   
    <string name="localization">Localização</string>   
    <string name="description">Descrição</string>   
    <string name="createdAt">Criação</string>   
    <string name="updatedAt">Atualização</string>  

    <string name="title_activity_incidents_locator_map">IncidentsLocatorMapActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="incidentsMapActivityTitle">Mapa de incidentes da USP</string>
    <string name="login_button">Login</string>
    
    <string name="filter">Ordernar</string>
    <string name="submenu_filter_depto">Departamento</string>
    <string name="submenu_filter_status">Status do incidente</string>
    <string name="sorted_name">Incidentes ordenados</string>
    <string name="sorted_dept_name">Departamentos</string>
    <string name="map_name">Incidentes no Mapa</string>
    <string name="map">Incidentes no Mapa</string>
    
    
    <string name="rb_open">Aberto</string>
    <string name="rb_working_on">Em andamento</string>
    <string name="rb_solved">Resolvido</string>
    <string name="rb_hiden">Escondido</string>
</resources>
