<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <ImageView
        android:id="@+id/photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"/>
    
    <ImageView
        android:id="@+id/local"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"/>
    
    <TextView
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/localization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/localization"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="16sp" />
    
    <TextView
        android:id="@+id/createdAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createdAt"
        android:textSize="16sp" />
    
    <TextView
        android:id="@+id/updatedAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updatedAt"
        android:textSize="16sp" />
</LinearLayout>
