<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <ImageView
        android:id="@+id/photo"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/local"
        android:layout_width="fill_parent"
        android:layout_height="110dp"
        android:layout_gravity="center_horizontal"
        tools:ignore="ContentDescription" />
	
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:background="#E1E1E1">
        
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight=".35"
	        android:text="@string/id" />
	    
	    <TextView
	        android:id="@+id/id"
	        android:layout_width="0dp"
	        android:layout_weight=".65"
	        android:layout_height="wrap_content"
	        android:textSize="16sp" />
	</LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:background="#E1E1E1"
        android:weightSum="1" >
	    
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight=".35"
	        android:text="@string/user" />
	    
	    <TextView
	        android:id="@+id/user"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight=".65"
	        android:textSize="16sp" />
	</LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:background="#E1E1E1"
        android:weightSum="1" >
	    
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight=".35"
	        android:text="@string/localization" />
    
	    <TextView
	        android:id="@+id/localization"
	        android:layout_width="0dp"
	        android:layout_weight=".65"
	        android:layout_height="wrap_content"
	        android:textSize="16sp" />
	</LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:background="#E1E1E1"
        android:weightSum="1" >
	    
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight=".35"
	        android:text="@string/description" />
    
	    <TextView
	        android:id="@+id/description"
	        android:layout_width="0dp"
	        android:layout_weight=".65"
	        android:layout_height="wrap_content"
	        android:textSize="16sp" />
	</LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:background="#E1E1E1"
        android:weightSum="1" >
	    
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight=".35"
	        android:text="@string/createdAt" />
	    
	    <TextView
	        android:id="@+id/createdAt"
	        android:layout_width="0dp"
	        android:layout_weight=".65"
	        android:layout_height="wrap_content"
	        android:textSize="16sp" />
	</LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:background="#E1E1E1"
        android:weightSum="1" >
	    
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight=".35"
	        android:text="@string/updatedAt" />
	   
	   <TextView
	       android:id="@+id/updatedAt"
	       android:layout_width="0dp"
	       android:layout_weight=".65"
	       android:layout_height="wrap_content"
	       android:textSize="16sp" />
	</LinearLayout>
	
</LinearLayout>